BEEBEEP (Secure Lan Messanger) - CHANGELOG - (c) Marco Mastroddi

BeeBEEP 5.4.1
- Fixed bug: "Transfer completed" message is not showed in chat
- File sharing window now save its geometry on close
- Create message window now save its geometry on close
- Added option "Enable maximize button"

BeeBEEP 5.4.0
- Patched Qt 5.9.6: window state are not restored (save only geometry option added)
- Prevent "user collision" from same IP address
- Fixed "slow connection bug" at startup
- Added option "Always open chat on new message"
- Added option to remove members from group
- Added option "AllowAddMembersToGroup" in beebeep.rc
- Added option "AllowRemoveMembersFromGroup" in beebeep.rc
- Added option "Reset geometry of all windows"
- Fixed some GUI bugs
- On new message the BeeBEEP main icon also blinks

BeeBEEP 5.2.0
- Added "Create message" window to send one time message to many
- Added default multicast group address 239.255.64.75
- Added option "Use default multicast group address"
- Added option "Show users on connection"

BeeBEEP 5.0.2
- Fixed compatibility of window geometry and state with previous version
- Fixed minor bug in save settings
- Added option "Save window's geometry" on close 

BeeBEEP 5.0.1
- Added "DisableSystemProxyForConnections" option

BeeBEEP 5.0.0
- [SECURITY UPDATE] Encryption level 3 using key generated by SHA3-256 algorithm
- Desktop Sharing (beta)
- Send screenshot from chat
- Simplified GUI of "Configure network..." option
- Hive protocol can be used to contact user who remains offline
- Added delay on first connection option
- Option to send offline messages also in chat with all user
- ShareBox is improved with remote folder creation
- Image transferred can be also opened with a double click in preview
- Option to show usernames in chat with colors or not
- "User has read message" is now available as tootip on the user list of the chat (on mouse hover)
- Updated to Qt 5.9.6

BeeBEEP 4.0.0
- Changed all the main user interface